add Header component

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -4,10 +4,12 @@
         <meta charset="utf-8" />
         <title>Title</title>
         <meta name="description" content="description" >
+
+        <link rel="stylesheet" type="text/css" href="/Users/jo-eunbyeol/workspace/medium-project/client/src/css/main.css" />
     </head>
     <body>
         <header>
-            <h1>Title</h1>
+
         </header>
         <main>
             <div id="app">
