--- a/client/src/index.html
+++ b/client/src/index.html
@@ -5,7 +5,7 @@
         <title>Title</title>
         <meta name="description" content="description" >
 
-        <link rel="stylesheet" type="text/css" href="/Users/jo-eunbyeol/workspace/medium-project/client/src/css/main.css" />
+        <link rel="stylesheet" type="text/css" href="./css/main.css" />
     </head>
     <body>
         <header>
