--- a/client/src/index.html
+++ b/client/src/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <title>Title</title>
         <meta name="description" content="description" >
-
+        <script src="https://apis.google.com/js/platform.js" async defer></script>
         <link rel="stylesheet" type="text/css" href="./css/main.css" />
     </head>
     <body>
