add googleAuth function

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <title>Title</title>
-        <meta name="description" content="description" >
-        <script src="https://apis.google.com/js/platform.js" async defer></script>
-        <link rel="stylesheet" type="text/css" href="./css/main.css" />
-    </head>
-    <body>
-        <header>
 
-        </header>
-        <main>
-            <div id="app">
-                <span>Will not show this if React Component App is rendered correctly</span>
-            </div>
-        </main>
-    </body>
+<head>
+    <meta charset="utf-8" />
+    <title>Title</title>
+    <meta name="description" content="description">
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <link rel="stylesheet" type="text/css" href="./css/main.css" />
+</head>
+
+<body>
+    <header>
+
+    </header>
+    <main>
+        <div id="app">
+            <span>Will not show this if React Component App is rendered correctly</span>
+        </div>
+        <div id="googleButton"></div>
+    </main>
+</body>
+
 </html>
