remove rel=stylesheet

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -1,23 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="utf-8" />
     <title>Title</title>
-    <meta name="description" content="description">
+    <meta name="description" content="description" />
 
-    <link rel="stylesheet" type="text/css" href="./css/main.css" />
-</head>
+    <link type="text/css" href="./css/main.css" />
+  </head>
 
-<body>
-    <header>
-
-    </header>
+  <body>
+    <header></header>
     <main>
-        <div id="app">
-            <span>Will not show this if React Component App is rendered correctly</span>
-        </div>
+      <div id="app">
+        <span
+          >Will not show this if React Component App is rendered correctly</span
+        >
+      </div>
     </main>
-</body>
-
+  </body>
 </html>
