--- a/client/src/index.html
+++ b/client/src/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto+Slab "
+      rel="stylesheet"
+    />
     <meta charset="utf-8" />
     <title>Title</title>
     <meta name="description" content="description" />
 
-    <link type="text/css" href="./css/main.css" />
+    <link rel="stylesheet" type="text/css" href="./css/main.css" />
   </head>
 
   <body>
