--- a/client/src/index.html
+++ b/client/src/index.html
@@ -9,7 +9,7 @@
     <title>Title</title>
     <meta name="description" content="description" />
 
-    <link rel="stylesheet" type="text/css" href="./css/main.css" />
+    <link rel="stylesheet" href="./css/main.css" />
   </head>
 
   <body>
