change href to src

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -9,7 +9,7 @@
     <title>Title</title>
     <meta name="description" content="description" />
 
-    <link rel="stylesheet" href="%PUBLIC_URL%/css/main.css" />
+    <link rel="stylesheet" src="%PUBLIC_URL%/css/main.css" />
   </head>
 
   <body>
