--- a/client/src/index.html
+++ b/client/src/index.html
@@ -8,8 +8,8 @@
     <meta charset="utf-8" />
     <title>Title</title>
     <meta name="description" content="description" />
-
-    <link rel="stylesheet" href="css/main.css" />
+    /Users/jo-eunbyeol/workspace/medium-project/public/css/main.css
+    <link rel="stylesheet" href="main.css" />
   </head>
 
   <body>
