--- a/client/src/index.html
+++ b/client/src/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" type="text/css" href="reset.css" />
     <link
       href="https://fonts.googleapis.com/css?family=Roboto+Slab "
       rel="stylesheet"
